--- a/examples/quick_start.ipynb
+++ b/examples/quick_start.ipynb
@@ -9,6 +9,7 @@
     "colab": {
       "name": "quick_start.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "language_info": {
@@ -23,7 +24,6 @@
         "colab_type": "text"
       },
       "source": [
-        "# **在线体验**\n",
         "<a href=\"https://colab.research.google.com/github/AgentMaker/AgentOCR/blob/main/examples/quick_start.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
@@ -88,7 +88,7 @@
         "id": "2Q7Ns0EW3Qz8"
       },
       "source": [
-        "## **使用**\n",
+        "# **使用**\n",
         "* 支持多语言识别模型，可通过内置的配置文件进行快速切换"
       ]
     },
@@ -128,7 +128,7 @@
         "for line in result:\n",
         "    print(line)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
         "for line in result:\n",
         "    print(line)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
         "id": "czZapFYM3Qz-"
       },
       "source": [
-        "# **韩文识别**\n",
+        "## **韩文识别**\n",
         "![](https://ai-studio-static-online.cdn.bcebos.com/d4f9dd815d024114bd4eee7dca03f7222c135073b01642f3866684b404b75d2a)\n"
       ]
     },
@@ -251,7 +251,7 @@
         "for line in result:\n",
         "    print(line)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
