--- a/examples/quick_start.ipynb
+++ b/examples/quick_start.ipynb
@@ -26,7 +26,7 @@
       "source": [
         "# **在线体验**\n",
         "<a href=\"https://colab.research.google.com/github/AgentMaker/AgentOCR/blob/main/examples/quick_start.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>",
-        "<a href=\"https://aistudio.baidu.com/aistudio/projectdetail/2295574\" target=\"_parent\"><img src=\"https://ai-studio-static-online.cdn.bcebos.com/41b0b8507c5b40ff8c1a05cc8388c8f6d315793f7fa14d9ca33ce9786f873dab\" alt=\"Open In AIStudio\"/></a>"
+        "<a href=\"https://aistudio.baidu.com/aistudio/projectdetail/2295574\" target=\"_parent\"><img src=\"https://paddlepaddle-org-cn.cdn.bcebos.com/paddle-site-front/static/media/paddlelogo.0b483fa7.png\" alt=\"Open In AIStudio\"/></a>"
       ]
     },
     {
