--- a/examples/quick_start.ipynb
+++ b/examples/quick_start.ipynb
@@ -25,7 +25,8 @@
       },
       "source": [
         "# **在线体验**\n",
-        "[![](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/AgentMaker/AgentOCR/blob/main/examples/quick_start.ipynb)",
+        "<a href=\"https://colab.research.google.com/github/AgentMaker/AgentOCR/blob/main/examples/quick_start.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>",
+        "# \n",
         "[![](https://img.shields.io/badge/AIStudio-Open%20In%20AIStudio-blue)](https://aistudio.baidu.com/aistudio/projectdetail/2295574)"
       ]
     },
