--- a/examples/quick_start.ipynb
+++ b/examples/quick_start.ipynb
@@ -24,12 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AgentMaker/AgentOCR/blob/main/examples/quick_start.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>",
-        "<p></p>",
-        "<a href=\"https://aistudio.baidu.com/aistudio/projectdetail/2295574\" target=\"_parent\"><img src=\"https://img.shields.io/badge/AIStudio-Open%20In%20AIStudio-blue\" alt=\"Open In AIStudio\"/></a>"
-      ]
-    },
-
+        "<a href=\"https://colab.research.google.com/github/AgentMaker/AgentOCR/blob/main/examples/quick_start.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
